@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-14T08:10:17Z",
-  "count_outdated" : 482,
-  "uniques_outdated" : 311,
+  "timestamp" : "2024-02-18T16:08:05Z",
+  "count_outdated" : 483,
+  "uniques_outdated" : 312,
   "count" : 484,
   "uniques" : 313,
   "clones" : [
-    {
-      "timestamp": "2024-02-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-05T00:00:00Z",
       "count": 1,
